Fixed z-index

--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -2,7 +2,7 @@
 
 .cart-info-wrapper {
     position: absolute;
-    z-index: 1;
+    z-index: 3;
     top: 4rem;
     background: white;
     // border: 2px solid green;
